--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,74 @@
+* {
+	margin: 0px;
+	padding: 0px;
+}
+
+body {
+	background-color: #c57457;
+	border-radius: "5px";
+	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
 h1 {
-	color: #0b914e;
-	background-color: yellowgreen;
+	color: #f9e9db;
+}
+
+button {
+	background-color: #f9e2a2;
+	border-radius: 6px;
+}
+button:hover {
+	background-color: #f9e2af;
+	color: white;
 }
 
 .container {
 	width: 70%;
+	background-color: #c57457;
+}
+
+.top {
+	display: flex;
+	width: 100%;
+	justify-content: center;
+	padding: 8px 0px;
+
+	background-color: #8a3232;
+	box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
+
+	margin-bottom: 16px;
+}
+
+.controls {
+	display: flex;
+	width: 100%;
+	justify-content: center;
+
+	font-size: medium;
+	align-items: center;
+	vertical-align: center;
+
+	gap: 4px;
+}
+
+.container {
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	background-color: #c57457;
+}
+
+.canvasContainer {
+	margin-top: 10px;
+	height: 70vh;
+	width: 80%;
+	background-color: #f9e2af;
+}
+.final-results {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background-color: #f9e2af;
+	padding: 0 15px 30px 15px;
 }
